--- a/create.css
+++ b/create.css
@@ -64,7 +64,7 @@
 }
 .buttonL {
     width: 40px;
-    background-color: #e2c1ff;
+    background-color: #ffb5d3;
     font-size: 25px;
     border-style: hidden;
     border-radius: 0px;
