small changes to apearance

--- a/create.css
+++ b/create.css
@@ -16,7 +16,7 @@
 
 .buttonAm:hover {
     width: 60px;
-    background-color: #bf5d5d;
+    background-color: #e07d7d;
     font-size: 25px;
     border-style: solid;
     border-radius: 1px;
@@ -42,7 +42,7 @@
 
 buttonAe:hover {
     width: 60px;
-    background-color: #f7b765;
+    background-color: #efbf81;
     font-size: 25px;
     border-style: solid;
     border-radius: 1px;
@@ -68,7 +68,7 @@ buttonAe:hover {
 
 .buttonTm:hover {
     width: 60px;
-    background-color: #f4ee75;
+    background-color: #fffbaa;
     font-size: 25px;
     border-style: solid;
     border-radius: 1px;
@@ -94,7 +94,7 @@ buttonAe:hover {
 
 .buttonBm:hover {
     width: 60px;
-    background-color: #a2ef88;
+    background-color: #bfffaa;
     font-size: 25px;
     border-style: solid;
     border-radius: 1px;
@@ -120,7 +120,7 @@ buttonAe:hover {
 
 .buttonSm:hover {
     width: 60px;
-    background-color: #95dee5;
+    background-color: #baf9ff;
     font-size: 25px;
     border-style: solid;
     border-radius: 1px;
@@ -146,7 +146,7 @@ buttonAe:hover {
 
 .buttonNm:hover {
     width: 60px;
-    background-color: #809fce;
+    background-color: #a6c1ea;
     font-size: 25px;
     border-style: solid;
     border-radius: 1px;
@@ -172,7 +172,7 @@ buttonAe:hover {
 
 .buttonH:hover {
     width: 60px;
-    background-color: ##baa7d6;
+    background-color: #e8d8ff;
     font-size: 25px;
     border-style: solid;
     border-radius: 1px;
@@ -198,7 +198,7 @@ buttonAe:hover {
 
 .buttonNg:hover {
     width: 60px;
-    background-color: #ac9fdd;
+    background-color: #d2c6ff;
     font-size: 25px;
     border-style: solid;
     border-radius: 1px;
@@ -224,7 +224,7 @@ buttonAe:hover {
 
 .buttonL:hover {
     width: 60px;
-    background-color: #e295b5;
+    background-color: #ffb5d3;
     font-size: 25px;
     border-style: solid;
     border-radius: 1px;
@@ -250,7 +250,7 @@ buttonAe:hover {
 
 .buttonA:hover {
     width: 60px;
-    background-color: #d67ccd;
+    background-color: #ffa3f6;
     font-size: 25px;
     border-style: solid;
     border-radius: 1px;
