--- a/create.css
+++ b/create.css
@@ -283,3 +283,134 @@ buttonAe:hover {
     text-align: center;
     border-radius: 4px;
 }
+
+.buttonAm2 {
+    width: 70px;
+    background-color: #e07d7d;
+    font-size: 13px;
+    border-style: solid;
+    border-radius: 1px;
+    border-color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.buttonAe2 {
+    width: 70px;
+    background-color: #efbf81;
+    font-size: 13px;
+    border-style: solid;
+    border-radius: 1px;
+    border-color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.buttonTm2 {
+    width: 70px;
+    background-color: #fffbaa;
+    font-size: 13px;
+    border-style: solid;
+    border-radius: 1px;
+    border-color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.buttonBm2 {
+    width: 70px;
+    background-color: #bfffaa;
+    font-size: 13px;
+    border-style: solid;
+    border-radius: 1px;
+    border-color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.buttonSm2 {
+    width: 70px;
+    background-color: #baf9ff;
+    font-size: 13px;
+    border-style: solid;
+    border-radius: 1px;
+    border-color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+
+.buttonNm2 {
+    width: 70px;
+    background-color: #a6c1ea;
+    font-size: 13px;
+    border-style: solid;
+    border-radius: 1px;
+    border-color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.buttonH2 {
+    width: 70px;
+    background-color: #e8d8ff;
+    font-size: 13px;
+    border-style: solid;
+    border-radius: 1px;
+    border-color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.buttonNg2 {
+    width: 70px;
+    background-color: #d2c6ff;
+    font-size: 13px;
+    border-style: solid;
+    border-radius: 1px;
+    border-color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.buttonL2 {
+    width: 70px;
+    background-color: #ffb5d3;
+    font-size: 13px;
+    border-style: solid;
+    border-radius: 1px;
+    border-color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.buttonA2 {
+    width: 70px;
+    background-color: #ffa3f6;
+    font-size: 13px;
+    border-style: solid;
+    border-radius: 1px;
+    border-color: white;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    border-radius: 4px;
+}
